# ss24-zeltner-columnar-data

./: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  index.ts  package-lock.json  package.json  playground.ts  read_csv.ts
.github/workflows/: CI.yml
apps/interpreter/: project.json
apps/interpreter/src/: index.ts
example/: cars.jv  electric-vehicles-polars.jv  electric-vehicles.jv  no-transformation-ts.jv  one-block.jv  plob-ma.jv  plob-no.jv  plob-so.jv  shared.jv  testing.jv  ts-ma.jv  ts-no.jv  ts-so.jv
libs/execution/src/lib/: execution-context.ts  extension.ts
libs/execution/src/lib/blocks/: block-execution-util.ts
libs/extensions/rdbms/exec/: project.json
libs/extensions/rdbms/exec/src/: extension.ts
libs/extensions/std/exec/: project.json
libs/interpreter-lib/: project.json
libs/interpreter-lib/src/: interpreter.ts
libs/language-server/src/lib/: jayvee-module.ts
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs  main.rs  runcfg.rs
tools/scripts/: test_polars.bash
(+76 files in other folders)
