[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "napi-package-template"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi        = "2"
napi-derive = "2"
polars = { version = "0.40.0", features = ["ipc"] }
rayon = "1.10.0"
adbc_core = { path = "../arrow-adbc/rust/core/", features = ["driver_manager"] }
adbc_dummy = { path = "../arrow-adbc/rust/drivers/dummy/" }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
